testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__trace_id_in_child_span.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: tracing_events
---
- fields:
    message: new
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: /with_child_span
    http.scheme: HTTP
    http.target: /with_child_span
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET /with_child_span
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"
- fields:
    message: new
  level: INFO
  span:
    name: my child span
  spans:
    - http.client_ip: ""
      http.flavor: "1.1"
      http.host: ""
      http.method: GET
      http.route: /with_child_span
      http.scheme: HTTP
      http.target: /with_child_span
      http.user_agent: ""
      name: HTTP request
      otel.kind: server
      otel.name: GET /with_child_span
      trace_id: "[trace_id:lg32]"
  target: "axum_tracing_opentelemetry::middleware::trace_extractor::tests"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    name: my child span
  spans:
    - http.client_ip: ""
      http.flavor: "1.1"
      http.host: ""
      http.method: GET
      http.route: /with_child_span
      http.scheme: HTTP
      http.target: /with_child_span
      http.user_agent: ""
      name: HTTP request
      otel.kind: server
      otel.name: GET /with_child_span
      trace_id: "[trace_id:lg32]"
  target: "axum_tracing_opentelemetry::middleware::trace_extractor::tests"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: /with_child_span
    http.scheme: HTTP
    http.status_code: "200"
    http.target: /with_child_span
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET /with_child_span
    otel.status_code: OK
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "axum_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"

