testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__trace_id_in_child_span_for_remote.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: tracing_events
---
- fields:
    message: new
  level: TRACE
  span:
    http.request.method: GET
    name: HTTP request
    network.protocol.version: "1.1"
    otel.kind: Server
    otel.name: GET
    server.address: ""
    span.type: web
    url.path: /with_child_span
    url.scheme: ""
    user_agent.original: ""
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"
- fields:
    message: new
  level: INFO
  span:
    name: my child span
  spans:
    - http.request.method: GET
      http.route: /with_child_span
      name: HTTP request
      network.protocol.version: "1.1"
      otel.kind: Server
      otel.name: GET /with_child_span
      server.address: ""
      span.type: web
      url.path: /with_child_span
      url.scheme: ""
      user_agent.original: ""
  target: "axum_tracing_opentelemetry::middleware::trace_extractor::tests"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    name: my child span
  spans:
    - http.request.method: GET
      http.route: /with_child_span
      name: HTTP request
      network.protocol.version: "1.1"
      otel.kind: Server
      otel.name: GET /with_child_span
      server.address: ""
      span.type: web
      url.path: /with_child_span
      url.scheme: ""
      user_agent.original: ""
  target: "axum_tracing_opentelemetry::middleware::trace_extractor::tests"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: TRACE
  span:
    http.request.method: GET
    http.response.status_code: "200"
    http.route: /with_child_span
    name: HTTP request
    network.protocol.version: "1.1"
    otel.kind: Server
    otel.name: GET /with_child_span
    server.address: ""
    span.type: web
    url.path: /with_child_span
    url.scheme: ""
    user_agent.original: ""
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"

